# Mu-Online-CrossPlataform

./: README.md
android/app/src/main/assets/: client_runtime.ini
android/app/src/main/cpp/: CMakeLists.txt  android_bootstrap.cpp
source/: BaseCls.h  ChaosGenesis.cpp  CharMakeWin.cpp  CharSelMainWin.cpp  GMCrywolf1st.cpp  GlobalBitmap.cpp  GlobalBitmap.h  LoginMainWin.cpp  LoginWin.cpp  MixMgr.h  MsgWin.cpp  NewUIBase.h  NewUICharacterInfoWindow.cpp  NewUICommonMessageBox.cpp  NewUICursedTempleEnter.cpp  NewUICursedTempleResult.cpp  NewUICursedTempleSystem.cpp  NewUICustomMessageBox.cpp  NewUIGuildMakeWindow.cpp  NewUIMessageBox.cpp  NewUIMyQuestInfoWindow.cpp  NewUINPCDialogue.cpp  NewUISiegeWarCommander.cpp  NewUISiegeWarObserver.cpp  NewUISiegeWarSoldier.cpp  NewUIStorageInventory.cpp  NewUITextBox.cpp  PersonalShopTitleImp.h  ServerSelWin.cpp  Sprite.cpp  SysMenuWin.cpp  TextureScript.cpp  TradeX.cpp  UIControls.cpp  UIGuildInfo.cpp  UIGuildMaster.cpp  UIMng.cpp  UIMng.h  UIWindows.cpp  ZzzBMD.cpp  (+9 more)
source/GameShop/: MsgBoxIGSBuyConfirm.cpp  MsgBoxIGSBuyPackageItem.cpp  MsgBoxIGSBuySelectItem.cpp  MsgBoxIGSCommon.cpp  MsgBoxIGSDeleteItemConfirm.cpp  MsgBoxIGSGiftStorageItemInfo.cpp  MsgBoxIGSSendGift.cpp  MsgBoxIGSSendGiftConfirm.cpp  MsgBoxIGSStorageItemInfo.cpp  MsgBoxIGSUseBuffConfirm.cpp  MsgBoxIGSUseItemConfirm.cpp
source/Platform/: AndroidWin32Compat.cpp  AndroidWin32Compat.h  GameServerBootstrap.cpp  GameServerBootstrap.h  GlobalBitmapAndroidCompat.cpp  LegacyAndroidClientStubs.cpp  LegacyAndroidGameCompat.h  LegacyAndroidUiCompat.cpp  LegacyCharacterSceneCompat.cpp  LegacyCharacterSceneLinkCompat.cpp  LegacyCharacterUiRuntime.cpp  LegacyClientRuntime.cpp  LegacyErrorReportCompat.cpp  LegacyLoginRenderCompat.cpp  LegacyLoginServerListRuntime.cpp  LegacyLoginUiRuntime.cpp  LegacyMapManagerCompat.cpp  LegacyObjectCompat.cpp  LegacyTerrainCompat.cpp  ZzzTextureAndroidCompat.cpp
